# labas8

./: CMakeLists.txt
List/: CMakeLists.txt  TList.cpp  TList.h
QueueLib/: CMakeLists.txt  Queue.h
gtest/: CMakeLists.txt  gtest-all.cc  gtest.h
main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_TQueueList.cpp
