Ô ªøcmake_minimum_required(VERSION 2.8)
#–ü—Ä–æ–≤–µ—Ä–∫–∞ –≤–µ—Ä—Å–∏–∏ CMake.
    set(PROJECT_NAME TQueueLib)
#–°–æ–∑–¥–∞–µ–º –æ–±—ã—á–Ω—É—é –ª–æ–∫–∞–ª—å–Ω—É—é –ø–µ—Ä–µ–º–µ–Ω–Ω—É—é —Å –∏–º–µ–Ω–µ–º –ø—Ä–æ–µ–∫—Ç–∞
    project($
	    {
	    PROJECT_NAME}

)
#–ù–∞–∑–≤–∞–Ω–∏–µ –ø—Ä–æ–µ–∫—Ç–∞
#–ü–µ—Ä–µ–º–µ–Ω–Ω–∞—è —Å –∏–º–µ–Ω–µ–º –±–∏–±–ª–∏–æ—Ç–µ–∫–∏
    set(main main)
    set(List List)
    set(QueueLib QueueLib)
    set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "Configs"
	FORCE)
#–°–æ–∑–¥–∞–µ—Ç—Å—è –ø–µ—Ä–µ–º–µ–Ω–Ω–∞—è CMAKE_CONFIGURATION_TYPES —Å–æ –∑–Ω–∞—á–µ–Ω–∏–µ–º "Debug;Release" –∏ –º–µ—Ç–∫–æ–π/—Ä–∞–∑–¥–µ–ª–æ–º Configs, –ø–µ—Ä–µ–º–µ–Ω–Ω–∞—è —Å–æ—Ö—Ä–∞–Ω–∏–µ—Ç—Å—è –≤ —Å–ø–µ—Ü–∏–∞–ª—å–Ω–æ–º —Ñ–∞–π–ª–µ –¥–æ—Å—Ç—É–ø–Ω–æ–º –∏–∑ –≤—Å–µ—Ö —Ñ–∞–π–ª–æ–≤,
    if (NOT CMAKE_BUILD_TYPE)
#–ø—Ä–æ–≤–µ—Ä–∫–∞ –∏–º–µ—é—â–∏—Ö—Å—è —É –∫–æ–º–ø–∏–ª—è—Ç–æ—Ä–∞ –≤–∞—Ä–∏–∞–Ω—Ç–æ–≤ —Å–±–æ—Ä–∫–∏
    set(CMAKE_BUILD_TYPE Release)
#–ï—Å–ª–∏ –Ω–µ—Ç —Ç–æ —É—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º Release
	endif()
	include_directories($
			    {
			    CMAKE_CURRENT_SOURCE_DIR}
			    /List $ {
			    CMAKE_CURRENT_SOURCE_DIR}

			    /QueueLib)
#${CMAKE_CURRENT_SOURCE_DIR}/gtest)
#${CMAKE_CURRENT_SOURCE_DIR} - —Å—Ç–∞–Ω–¥–∞—Ä—Ç–Ω–∞—è –ø–µ—Ä–µ–º–µ–Ω–Ω–∞—è —Å –∞–¥—Ä–µ—Å–æ–º —Ä–∞–±–æ—á–µ–π –¥–∏—Ä–µ–∫—Ç–æ—Ä–∏–∏
#–î–æ–±–∞–≤–ª—è–µ–º –¥–∏—Ä–µ–∫—Ç–æ—Ä–∏—é —Å –ø–æ–¥-CMakeList-–æ–º, –∏ –≤—ã–ø–æ–ª–Ω—è–µ–º –ø–æ–¥-CMakeList
    add_subdirectory(main)
    add_subdirectory(List)
    add_subdirectory(QueueLib)
    add_subdirectory(gtest)
    add_subdirectory(test)
